--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,9 @@
   margin: 0;
   padding: 0;
   }
-  
+
  body {
+    padding: 10px;
     font-family: "Manrope", sans-serif;
    }
   
@@ -88,6 +89,7 @@ header{
 .header-button {
     background-color: #FF6433;
     border-radius: 10px;
+    cursor: pointer;
     padding: 20px;
     border-style: none;
     width: 200px;
@@ -128,4 +130,92 @@ header{
     bottom: -80px;
     
 }
+ 
+
+.quote {
+    background-color: #E2E6E9;
+    display: flex;
+    width: 100%;
+    gap: 80px;
+    margin-top: 100px;
+}
+
+.quote-left {
+    width: 50%;
+}
+
+.quote-containers {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 40px;
+}
+
+.quote-containers img {
+    height: 26px;
+    width: 26px;
+}
+
+.quote-left-text {
+    font-size: 58px;
+    font-weight: bold;
+    margin-top: 60px;
+    margin-bottom: 30px;
+}
+
+.quote-link {
+    color: black;
+    cursor: pointer;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 600;
+    margin-left: 45px;
+
+}
+
+
+.arrow {
+  content: "\2192";
+} 
+
+.link__arrow {
+    display: flex;
+    gap: 10px;
+}
+
+.quote-right {
+    width: 50%;
+}
+
+.quote-right-text {
+    font-size: 58px;
+    font-weight: bold;
+    margin-top: 60px;
+    margin-bottom: 30px;
+
+}
+
+
+.bold-texts {
+    font-weight: 600;
+    font-size: 24px;
+
+}
+
+ 
+form input {
+    width: 98%;
+    height: 60px;
+    border-style: none;
+    margin-bottom: 10px;
+    border-radius: 5px;
+   
+   
+}
+
+ ::placeholder {
+    padding: 20px;
+ }
+ 
+
+ 
 
