--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
     align-items: center;
 }
 
-.nav-bar-left {
+.nav-logo-container {
     flex: 1; 
 }
  
@@ -44,7 +44,7 @@
   align-self: center; 
 }
 
-.nav-bar-right {
+.navbar-list-container {
     display: flex;
     gap: 30px;
   
@@ -63,7 +63,7 @@
    
 }
 
-header{
+.banner-text-and-banner{
     display: flex;
     align-items: center;
     margin-top: 60px;
@@ -73,20 +73,21 @@ header{
 
 .header-right {
     /* width: 50%; */
-    /* flex: 1; */
+    flex: 1;
 }
 
-.header-left {
+.banner-text-container {
+    flex: 1;
     /* width: 50%; */
 
 }
 
-.header-text {
+.banner-text {
     font-weight: bold;
     font-size: 60px;
 }
 
-.header-button {
+.banner-button {
     background-color: #FF6433;
     border-radius: 10px;
     cursor: pointer;
@@ -98,7 +99,7 @@ header{
     
 }
 
-.header-button p {
+.banner-button p {
     color: white;
 }
 
@@ -114,21 +115,28 @@ header{
     
 }
 
-.header-right {
+.banner-images {
     position: relative;
 }
 
 .service {
     position: absolute;
-    right: 250px;
+    /* border: 1px solid red; */
+    right: 0;
+    left: -100px;
 
 }
 
 .ratings {
     position: absolute;
+    /* border: 1px solid red; */
     left: 180px;
-    bottom: -80px;
+    bottom: 0;
     
+}
+
+.banner-image {
+    width: 100%;
 }
  
 
@@ -215,6 +223,88 @@ form input {
  ::placeholder {
     padding: 20px;
  }
+
+ .quote-right-button {
+    background-color: #FF6433;
+    border-radius: 10px;
+    cursor: pointer;
+    padding: 20px;
+    border-style: none;
+    width: 200px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+
+ }
+
+ .quote-right-button p {
+    color: white;
+
+ }
+
+ .process-section {
+    display: flex;
+    gap: 100px;
+    margin-top: 100px;
+    justify-items: center;
+    width: 100%;
+    height: 500px;
+ }
+
+ .logo__hr {
+    display: flex;
+    gap: 30px;
+    /* width: 100%; */
+
+ }
+
+ .vertical-line {
+    height: 50px;
+     
+ }
+
+ .bold-text {
+    font-size: 20px;
+    font-weight: bold;
+
+ }
+
+ .process-section-h2 {
+    font-size: 58px;
+    font-weight: bold;
+
+ }
+
+ .smaller-text {
+    margin-bottom: 30px;
+ }
+
+ .process-section-left {
+    width: 50%;
+    align-self: center;
+    /* border: solid red; */
+    
+ }
+
+ .process-section-right {
+    /* border: solid red; */
+    /* height: 500px; */
+     
+ }
+
+
+.process-section-button {
+    background-color: #FF6433;
+    border-radius: 10px;
+    cursor: pointer;
+    padding: 20px;
+    border-style: none;
+    width: 150px;
+
+}
+
+.process-section-button p {
+    color: white;
+}
  
 
  
