--- a/styles.css
+++ b/styles.css
@@ -187,7 +187,7 @@
 
 .link__arrow {
     display: flex;
-    gap: 10px;
+    gap: 20px;
 }
 
 .quote-right {
@@ -431,3 +431,89 @@ form input {
     text-align: center;
    
   }
+
+  .learn-arrow {
+    display: flex;
+    gap: 20px;
+    justify-content: flex-end;
+    margin-top: 20px;
+  }
+
+  .learn-arrow a {
+    color: black;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 600;
+  }
+
+  .orange-container {
+    background-color: #FF6433;
+    height: 400px;
+    width: 600px;
+    display: block;
+    justify-items: center;
+    align-content: center;
+    position: absolute;
+    left: 50px;
+      
+  }
+
+  .orange-container p {
+    color: white;
+    font-weight: 700;
+    font-size: 38px;
+    margin-left: 50px;
+    width: 500px;
+     
+  }
+
+  .orange-container button {
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+    padding: 20px;
+    width: 177px;
+    margin-left: 50px;
+    margin-top: 40px;
+    cursor: pointer;
+  }
+
+  .experience-section {
+    margin-top: 100px;
+  }
+
+  .positioning-images {
+    position: relative;
+  }
+
+  .car-image {
+    position: absolute;
+    left: 30px;
+
+
+  }
+
+  .danieltools-image {
+    position: relative;
+    right: 30px;
+  }
+
+  .experience-container {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+  }
+
+  .experience-number {
+    font-weight: bold;
+    font-size: 48px;
+    color: #661CE7;
+
+  }
+
+  .experience-text {
+    font-weight: 600;
+    font-size: 20px;
+
+  }
+
